--- a/D2.3/Obu_descr.tex
+++ b/D2.3/Obu_descr.tex
@@ -4,6 +4,18 @@
 
 \todo{it will be completed when the document provided by Alstom on API  will be available.}
 
+\begin{comment}
+From QA :
+
+The EVC (European Vital Computer) is the heart of the ERTMS onboard system. This safety
+computer implements the functions of the SRS subset 026 of UNISIG (for SRS versions beginning
+with baseline 3, published by ERA) in order to guarantee the safety of the train movements.
+The OpenETCS scope of application is related to the only EVC part of whole ERTMS system.
+The Track-side part of the ETCS (the Radio Based Control) is excluded from the project activities,
+and only considered through its interfaces with the On-Board part of ETCS.
+
+\end{comment}
+
 \subsection{Aim of the OpenETCS project}
 
 \begin{comment} 
@@ -40,7 +52,10 @@ high level description of the environement  of the system  and main function
   \label{fig:architecture}
 \end{figure}
 
+\tbc
 
 \subsection{Safety properties}
 reference document subset 091 to the list of safety properties
 
+
+\tbc
