--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -101,16 +101,18 @@ Detailed process in regards of state of the art results and Cenelec standard req
 % Start here
 \section{Introduction}
 
-The purpose of this document is to describe, for the OpenETCS project, the activties of specification and design. However the activities of verification and validation are not in the scope of this document and will be described in WP4/D4.x.x.
+The purpose of this document is to describe, for the OpenETCS project, the means and methods used to perform the formal description.
 
-These activities shall follow the requirements of EN 50126 and EN 50128 and reflect usual activities for the development of railway critical systems (see D2.1.0  and D2.2.0).
+However the benchmark activities are not yet achieved in WP7, such the definition of the methods can not yet be done.
 
-This document  contents two parts :
-\begin{itemize}
-\item the description of the process to applied in the OpenETCS project
-\item the abstract description and the limit of the case study 
-\end{itemize}
+For the intermediate version of the document, we propose a description of the benefits of formal methods in the design, development, verification and validation of critical systems.
 
+\begin{issue}
+Is the detailed description of the formal methods to used during the openETCS project necessary ?
+If yes, can we postpone the final version of the document after the choice of the methods ? How the document can then be compatible with the deliverable of WP7 ?
+
+Otherwise what is expected from this document ?
+\end{issue}
 \section{Reference documents}
 \begin{itemize}
 \item CENELEC EN 50126-1 --- 01/2000 --- \emph{Railways applications –- The specification and 
@@ -160,6 +162,7 @@ to be defined or to be confirmed.
 \input{formal_vnv.tex}
 
 \input{openETCS_meth.tex}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
